--- a/packages/text-embeddings/embedding-values.yaml
+++ b/packages/text-embeddings/embedding-values.yaml
@@ -7,3 +7,8 @@ gpu:
 resources:
   limits:
     nvidia.com/gpu: ###ZARF_VAR_GPU_LIMIT###
+
+persistence:
+  size: ###ZARF_VAR_PVC_SIZE###
+  accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
+  storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
