--- a/.github/actions/python/action.yaml
+++ b/.github/actions/python/action.yaml
@@ -1,6 +1,10 @@
 name: setup-python
 description: "Setup Python and library dependencies"
 
+inputs:
+  additionalOptionalDep:
+    description: "Additional optional dependencies to install"
+
 runs:
   using: composite
   steps:
@@ -10,5 +14,10 @@ runs:
         python-version-file: 'pyproject.toml'
 
     - name: Install Python Deps
-      run: python -m pip install ".[dev]"
       shell: bash
+      run: python -m pip install ".[dev]"
+
+    - name: Install additionalDeps
+      if: ${{ inputs.additionalOptionalDep != '' }}
+      shell: bash
+      run: python -m pip install ".[${{ inputs.additionalOptionalDep }}]"
