--- a/packages/llama-cpp-python/llama-cpp-python-values.yaml
+++ b/packages/llama-cpp-python/llama-cpp-python-values.yaml
@@ -1,2 +1,7 @@
 image:
   tag: "###ZARF_CONST_IMAGE_VERSION###"
+
+persistence:
+  size: ###ZARF_VAR_PVC_SIZE###
+  accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
+  storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
