--- a/packages/vllm/vllm-values.yaml
+++ b/packages/vllm/vllm-values.yaml
@@ -3,3 +3,8 @@ image:
 
 gpu:
   runtimeClassName: nvidia
+
+persistence:
+  size: ###ZARF_VAR_PVC_SIZE###
+  accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
+  storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
