Revert "updating llama-cpp-python setup script makefile"
This reverts commit 87b1c03bf78b3de766d7624684bb6219e0ae049f.

--- a/packages/llama-cpp-python/Makefile
+++ b/packages/llama-cpp-python/Makefile
@@ -1,20 +1,7 @@
-MAKEFILE_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
-PORT := 50051
-
-install-llama-cpp-python:
-	@cd ${MAKEFILE_DIR} && \
+install:
 	python -m pip install ../../src/leapfrogai_sdk
-	@cd ${MAKEFILE_DIR} && \
-	python -m pip install ".[dev]"
+	python -m pip install -e .
 
-setup-llama-cpp-python-model:
-	@cd ${MAKEFILE_DIR} && \
-	rm -rf .model && mkdir .model
-	@cd ${MAKEFILE_DIR} && \
-	python scripts/model_download.py
-	@cd ${MAKEFILE_DIR} && \
-	mv .model/*.gguf .model/model.gguf
-
-dev-run-llama-cpp-python:
-	@cd ${MAKEFILE_DIR} && \
-	python -m leapfrogai_sdk.cli --app-dir=. main:Model --port=${PORT}
+dev:
+	make install
+	python -m leapfrogai_sdk.cli --app-dir=. main:Model
