--- a/packages/vllm/zarf.yaml
+++ b/packages/vllm/zarf.yaml
@@ -53,7 +53,6 @@ components:
           # NOTE: This assumes python is installed and in $PATH and 'huggingface_hub[cli,hf_transfer]' has been installed
           - cmd: python src/model_download.py
             env:
-              - LAI_REPO_ID=TheBloke/Synthia-7B-v2.0-GPTQ
-              - LAI_REVISION=gptq-4bit-32g-actorder_True
-              - LAI_QUANTIZATION=gptq
+              - LAI_REPO_ID=justinthelaw/Hermes-2-Pro-Mistral-7B-4bit-32g
+              - LAI_REVISION=main
               - LAI_HF_HUB_ENABLE_HF_TRANSFER=1
