fix prompt template, defenseunicorns model README

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -82,9 +82,9 @@ ARG TRUST_REMOTE_CODE="True" \
     MODEL_SOURCE=".model/" \
     MAX_CONTEXT_LENGTH=32768 \
     STOP_TOKENS='["</s>"]' \
-    PROMPT_FORMAT_CHAT_SYSTEM="<|system|>\n{}<|end|>\n" \
-    PROMPT_FORMAT_CHAT_USER="<|user|>\n{}<|end|>\n" \
-    PROMPT_FORMAT_CHAT_ASSISTANT="<|assistant|>\n{}<|end|>\n" \
+    PROMPT_FORMAT_CHAT_SYSTEM="<|im_start|>system\n{}<|im_end|>\n" \
+    PROMPT_FORMAT_CHAT_USER="<|im_start|>user\n{}<|im_end|>\n" \
+    PROMPT_FORMAT_CHAT_ASSISTANT="<|im_start|>assistant\n{}<|im_end|>\n" \
     PROMPT_FORMAT_DEFAULTS_TOP_P=1.0 \
     PROMPT_FORMAT_DEFAULTS_TOP_K=0 \
     TENSOR_PARALLEL_SIZE=1 \
