--- a/packages/supabase/manifests/declarative-conf-configmap.yaml
+++ b/packages/supabase/manifests/declarative-conf-configmap.yaml
@@ -95,11 +95,31 @@ data:
                 - admin
                 - anon
 
-      - name: realtime-v1
-        _comment: "Realtime: /realtime/v1/* -> ws://supabase-realtime:80/socket/*"
-        url: http://supabase-realtime:80/socket
+      - name: realtime-v1-ws
+        _comment: "Realtime: /realtime/v1/* -> ws://supabase-realtime:80/socket/websocket/*"
+        url: http://supabase-realtime:80/socket/websocket
         routes:
-          - name: realtime-v1-all
+          - name: realtime-v1-ws
+            strip_path: true
+            paths:
+              - /realtime/v1/websocket
+        plugins:
+          - name: cors
+          - name: key-auth
+            config:
+              hide_credentials: false
+          - name: acl
+            config:
+              hide_groups_header: true
+              allow:
+                - admin
+                - anon
+
+      - name: realtime-v1-api
+        _comment: "Realtime: /realtime/v1/* -> http://supabase-realtime:80/*"
+        url: http://supabase-realtime:80
+        routes:
+          - name: realtime-v1-api
             strip_path: true
             paths:
               - /realtime/v1/
