--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -90,6 +90,11 @@ realtime:
     TEMPORARY_SLOT: "true"
     DB_ENC_KEY: "testenckeychaangethisforsuresure"
     DNS_NODES: "''"
+  initContainers:
+   - name: realtime-init
+     image: docker.io/bitnami/os-shell:12-debian-12-r19
+     imagePullPolicy: Always
+     command: ['sh', '-c', 'echo "hello world"']
 
 rest:
   enabled: ###ZARF_VAR_ENABLE_REST###
