Ensures configmap is mounted in container

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -80,6 +80,7 @@ realtime:
     FLY_APP_NAME: "supabase-realtime"
     DB_ENC_KEY: "testenckeychaangethisforsuresure"
     DNS_NODES: "''"
+  extraConfigExistingConfigmap: "supabase-realtime-extra"
   initContainers:
    - name: realtime-init
      image: docker.io/bitnami/os-shell:12-debian-12-r19
