--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -75,12 +75,15 @@ realtime:
   resourcesPreset: "none"
   podLabels:
     sidecar.istio.io/inject: "false"
-  extraConfig: |
-    ALLOC_ID: "supabase-realtime"
-    FLY_APP_NAME: "supabase-realtime"
-    DB_ENC_KEY: "testenckeychaangethisforsuresure"
-    DNS_NODES: "''"
-  extraConfigExistingConfigmap: "supabase-realtime-extra"
+  extraEnvVars:
+    - name: ALLOC_ID
+      value: "supabase-realtime"
+    - name: FLY_APP_NAME
+      value: "supabase-realtime"
+    - name: DB_ENC_KEY
+      value: "testenckeychaangethisforsuresure"
+    - name: DNS_NODES
+      value: "''"
   initContainers:
    - name: realtime-init
      image: docker.io/bitnami/os-shell:12-debian-12-r19
