--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -58,7 +58,7 @@ components:
     required: true
     files:
       - source: scripts/setup-db.sh
-        target: /scripts/setup-db.sh
+        target: setup-db.sh
     charts:
       # This exists because the jwt token job fails to run in the main helm chart at the proper time due to its reliance on `helm.sh/hook: post-install`.
       # This annotation causes it to run at the end of the Supabase Zarf component.
