--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -84,7 +84,7 @@ realtime:
       value: "testenckeychaangethisforsuresure"
     - name: DNS_NODES
       value: "''"
-  initContainers:
+  sidecars:
    - name: realtime-init
      image: docker.io/bitnami/os-shell:12-debian-12-r19
      imagePullPolicy: Always
