chore: update release workflow to install necessary python deps
Signed-off-by: Jon Perry <yrrepnoj@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,6 +40,10 @@ jobs:
         with:
           python-version-file: 'pyproject.toml'
 
+      - name: Instal Python Deps
+        run: |
+          python -m pip install ".[dev,dev-whisper,dev-vllm]"
+
       - name: Build and Publish k3d-gpu image
         run: |
           cd packages/k3d-gpu
