--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -86,8 +86,8 @@ realtime:
       value: "''"
   sidecars:
    - name: realtime-init
-     image: docker.io/bitnami/os-shell:12-debian-12-r19
-     imagePullPolicy: Always
+     image: docker.io/busybox:stable
+     imagePullPolicy: IfNotPresent
      env:
       - name: SUPABASE_SERVICE_KEY
         valueFrom:
