--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -104,9 +104,7 @@ realtime:
        - -c
        - >-
          echo "Waiting for supabase-realtime to be ready...";
-         until nc -z localhost 9999; do sleep 1; done;
-         echo "supabase-realtime is ready. Sending curl request...";
-         curl --insecure -L -X POST 
+         curl --max-time 60 --insecure -L -X POST 
          -H "Content-Type: application/json" 
          -H "Authorization: Bearer $SUPABASE_SERVICE_KEY" 
          -H "apiKey: $SUPABASE_SERVICE_KEY" 
