chore: Bumps all the uds core versions to 0.25.0 and updates deployment docs (#874)
* Bumps uds core version to 0.25.0
* Swaps hardcoded deployment commands to make commands

--- a/.github/actions/uds-cluster/action.yaml
+++ b/.github/actions/uds-cluster/action.yaml
@@ -19,4 +19,4 @@ runs:
     - name: Create UDS Cluster
       shell: bash
       run: |
-        uds deploy k3d-core-slim-dev:0.22.2 --confirm
+        make create-uds-cpu-cluster
