--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
         with:
           python-version-file: 'pyproject.toml'
 
-      - name: Instal Python Deps
+      - name: Install Python Deps
         run: |
           python -m pip install ".[dev,dev-whisper,dev-vllm]"
 
