--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api
-  namespace: {{ .Release.Namespace }}
+  namespace: { { .Release.Namespace } }
   annotations:
-    zarf.dev/connect-description: "Load the OpenAPI spec for the LFAI API"
+    zarf.dev/connect-description: "Load the OpenAPI specification for the LeapfrogAI API"
     zarf.dev/connect-url: "/docs"
   labels:
-    zarf.dev/connect-name: lfai-api
+    zarf.dev/connect-name: leapfrogai-api
 spec:
   selector:
     app: api
