--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -87,6 +87,7 @@
     "fuse.js": "^7.0.0",
     "highlight.js": "^11.10.0",
     "isomorphic-dompurify": "^2.13.0",
+    "libreoffice-convert": "^1.6.0",
     "lit": "^3.1.4",
     "markdown-it": "^14.1.0",
     "openai": "^4.52.7",
