--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
-  namespace: {{ .Release.Namespace }}
+  namespace: { { .Release.Namespace } }
 spec:
-  replicas: {{ .Values.api.replcias }}
+  replicas: { { .Values.api.replicas } }
   strategy:
     rollingUpdate:
       maxUnavailable: 0
@@ -17,65 +17,68 @@ spec:
       labels:
         app: api
     spec:
+      securityContext:
+      {{- toYaml .Values.podSecurityContext | nindent 8 }}
       serviceAccountName: read-configmaps
       containers:
         - name: sidecar
-          image: kiwigrid/k8s-sidecar:{{ .Values.image.kiwigridTag }}
+          image: "{{ .Values.kiwigrid.image.repository }}:{{ .Values.kiwigrid.image.tag }}"
+          imagePullPolicy: { { .Values.kiwigrid.image.imagePullPolicy } }
           volumeMounts:
-          - name:  api-model
-            mountPath: /config/
+            - name: api-model
+              mountPath: /config/
           env:
-          - name: LABEL
-            value: "leapfrogai"
-          - name: FOLDER
-            value: /config/
-          - name: RESOURCE
-            value: both
-          - name: UNIQUE_FILENAMES
-            value: "true"
-          - name: NAMESPACE
-            value: leapfrogai
+            - name: LABEL
+              value: "leapfrogai"
+            - name: FOLDER
+              value: /config/
+            - name: RESOURCE
+              value: both
+            - name: UNIQUE_FILENAMES
+              value: "true"
+            - name: NAMESPACE
+              value: leapfrogai
+          securityContext:
+            { { - toYaml .Values.kiwigrid.securityContext | nindent 12 } }
         - name: api-container
-          image: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-api:{{ .Values.image.lfaiAPITag }}
-          imagePullPolicy: Always
+          image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: { { .Values.api.image.imagePullPolicy } }
           env:
-          - name: LFAI_CONFIG_PATH
-            value: /config/
-          - name: LFAI_CONFIG_FILENAME
-            value: "*.toml"
-          - name: DEFAULT_EMBEDDINGS_MODEL
-            value: "{{ .Values.api.defaultEmbeddingsModel }}"
-          - name: PORT
-            value: "{{ .Values.api.port }}"
-          - name: SUPABASE_URL
-            value: "{{ .Values.supabase.url }}"
-          - name: SUPABASE_ANON_KEY
-            valueFrom:
-              secretKeyRef:
-                name: supabase-bootstrap-jwt
-                key: anon-key
-                optional: true
+            - name: LFAI_CONFIG_PATH
+              value: /config/
+            - name: LFAI_CONFIG_FILENAME
+              value: "*.toml"
+            - name: DEFAULT_EMBEDDINGS_MODEL
+              value: { { .Values.api.env.defaultEmbeddingsModel } }
+            - name: PORT
+              value: { { .Values.api.env.port } }
+            - name: SUPABASE_URL
+              value: { { .Values.supabase.env.url } }
+            - name: SUPABASE_ANON_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: supabase-bootstrap-jwt
+                  key: anon-key
+                  optional: true
           ports:
-            - containerPort: 8080
+            - containerPort: { { .Values.api.env.port } }
           livenessProbe:
             httpGet:
               path: /healthz
-              port: 8080
+              port: { { .Values.api.env.port } }
             initialDelaySeconds: 10
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /healthz
-              port: 8080
+              port: { { .Values.api.env.port } }
             initialDelaySeconds: 10
             periodSeconds: 10
           securityContext:
-            runAsUser: 65532
-            runAsGroup: 65532
-            fsGroup: 65532
+            { { - toYaml .Values.api.securityContext | nindent 12 } }
           volumeMounts:
-          - name: api-model
-            mountPath: /config
+            - name: api-model
+              mountPath: /config
       volumes:
-      - name: api-model
-        emptyDir: {}
+        - name: api-model
+          emptyDir: {}
