--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -14,6 +14,6 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: { { .Values.api.env.port } }
+      targetPort: { { .Values.api.env.port } }
   type: ClusterIP
