--- a/packages/api/chart/templates/migration-job.yaml
+++ b/packages/api/chart/templates/migration-job.yaml
@@ -1,14 +1,15 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: api-migrations-{{ .Values.image.lfaiAPITag }}
+  name: api-migrations-{{ .Values.api.migration.image.tag }}
+  namespace: {{ .Release.Namespace }}
 spec:
   template:
     spec:
       containers:
-      - name: supabase-cli
-        image: "ghcr.io/defenseunicorns/leapfrogai/api-migrations:{{ .Values.image.lfaiAPITag }}"
-        env:
+        - name: supabase-cli
+          image: "{{ .Values.api.migration.image.repository }}:{{ .Values.api.migration.image.tag | default .Chart.AppVersion }}"
+          env:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -21,16 +22,16 @@ spec:
             - name: MIGRATION_SERVICE_PORT
               value: "{{ .Values.api.migration.servicePort }}"
 
-        # NOTE: This command is assuming the default username.
-        command: ["/bin/sh"]
-        args:
-          - -c
-          - >-
-            supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
-            supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
-        securityContext:
-          runAsUser: {{ .Values.image.securityContext.runAsUser }}
-          runAsGroup: {{ .Values.image.securityContext.runAsGroup }}
-          fsGroup: {{ .Values.image.securityContext.fsGroup }}
+          # NOTE: This command is assuming the default username.
+          command: ["/bin/sh"]
+          args:
+            - -c
+            - >-
+              supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
+              supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
+          securityContext:
+            runAsUser: { { .Values.image.securityContext.runAsUser } }
+            runAsGroup: { { .Values.image.securityContext.runAsGroup } }
+            fsGroup: { { .Values.image.securityContext.fsGroup } }
       restartPolicy: Never
   backoffLimit: 4
