--- a/packages/api/chart/values.yaml
+++ b/packages/api/chart/values.yaml
@@ -1,27 +1,56 @@
-image:
-  # x-release-please-start-version
-  lfaiAPITag: 0.10.0
-  # x-release-please-end
-  kiwigridTag: 1.23.3
+podSecurityContext:
+  fsGroup: 65532
 
+api:
+  image:
+    repository: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-api
+    # x-release-please-start-version
+    tag: 0.10.0
+    # x-release-please-end
+    imagePullPolicy: Always
+  replicas: 1
   securityContext:
     runAsUser: 65532
     runAsGroup: 65532
-    fsGroup: 65532
-
-supabase:
-  url: "http://supabase-kong.leapfrogai.svc.cluster.local:80"
-
-api:
-  replicas: 1
-  port: 8080
-  exposeAPI: "###ZARF_VAR_EXPOSE_API###"
-  defaultEmbeddingsModel: "###ZARF_VAR_DEFAULT_EMBEDDINGS_MODEL###"
+    runAsNonRoot: true
+    capabilities:
+      drop:
+        - ALL
+  env:
+    port: 8080
+    exposeAPI: "###ZARF_VAR_EXPOSE_API###"
+    defaultEmbeddingsModel: "###ZARF_VAR_DEFAULT_EMBEDDINGS_MODEL###"
 
   migration:
-    namespace: "leapfrogai"
+    image:
+      repository: ghcr.io/defenseunicorns/leapfrogai/api-migrations
+      # x-release-please-start-version
+      tag: 0.10.0
+      # x-release-please-end
+      imagePullPolicy: Always
+    securityContext:
+      runAsUser: 65532
+      runAsGroup: 65532
+      runAsNonRoot: true
+      capabilities:
+        drop:
+          - ALL
     serviceName: "supabase-postgresql"
     servicePort: "5432"
 
-package:
-  host: leapfrogai-api
+supabase:
+  env:
+    url: "http://supabase-kong.leapfrogai.svc.cluster.local:80"
+
+kiwigrid:
+  image:
+    repository: kiwigrid/k8s-sidecar
+    tag: 1.23.3
+    imagePullPolicy: Always
+  securityContext:
+    runAsUser: 65532
+    runAsGroup: 65532
+    runAsNonRoot: true
+    capabilities:
+      drop:
+        - ALL
