--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,165 @@
 repos:
-  # Generic pre-commit checks
+  ################
+  # GENERAL CHECKS
+  ################
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
       - id: check-added-large-files
+        name: Large Files check
         args: ["--maxkb=1024"]
+
       - id: check-merge-conflict
-      - id: detect-aws-credentials
-        args:
-          - "--allow-missing-credentials"
-      - id: detect-private-key
+        name: Merge Conflict Resolution Check
+
       - id: end-of-file-fixer
+        name: Newline EOF Checker
+
       - id: fix-byte-order-marker
+        name: Fix UTF-8 byte order marker
+
       - id: trailing-whitespace
+        name: Whitespace Cleaning Check
         args: [--markdown-linebreak-ext=md]
 
-  # Python linting and formatting
+  - repo: https://github.com/scop/pre-commit-shfmt
+    rev: v3.8.0-1
+    hooks:
+      - id: shfmt
+        name: Shell Script Format
+
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.18.0
+    hooks:
+      - id: gitleaks
+        name: GitLeaks Checks
+
+  - repo: https://github.com/sirosen/fix-smartquotes
+    rev: 0.2.0
+    hooks:
+      - id: fix-smartquotes
+
+  ############
+  # CODE LINT
+  ############
+
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: v0.12.1
+    hooks:
+      - id: markdownlint-cli2
+        name: Markdown Linting
+
+  - repo: https://github.com/hadolint/hadolint
+    rev: v2.12.0
+    hooks:
+      - id: hadolint-docker
+        name: Dockerfile Lint
+
+  - repo: local
+    hooks:
+      - id: eslint
+        name: eslint
+        language: system
+        entry: sh -c 'npm --prefix src/leapfrogai_ui/ run lint'
+        files: \.(js|jsx|ts|tsx|svelte|cjs|mjs)$ # *.js, *.jsx, *.ts, *.tsx, *.svelte, *.cjs, *.mjs
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.3.4
     hooks:
       - id: ruff # Run the linter.
       - id: ruff-format # Run the formatter.
 
-  # Local Eslint w/ Prettier
+  #############
+  # UDS v0.14.0
+  #############
+
+  # ZARF PACKAGE CHECK
   - repo: local
     hooks:
-    - id: eslint
-      name: eslint
-      language: system
-      entry: sh -c 'npm --prefix src/leapfrogai_ui/ run lint'
-      files: \.(js|jsx|ts|tsx|svelte|cjs|mjs)$ # *.js, *.jsx, *.ts, *.tsx, *.svelte, *.cjs, *.mjs
+      - id: download-schema
+        name: "Download Zarf Schema"
+        entry: bash -c 'curl -o zarf.schema.json https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/zarf.schema.json'
+        language: system
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.14.0
+    hooks:
+      - id: check-jsonschema
+        name: "Validate Zarf Configs Against Schema"
+        files: "zarf.yaml"
+        types: [yaml]
+        args: ["--schemafile", "zarf.schema.json"]
+  - repo: local
+    hooks:
+      - id: delete-schema
+        name: "Delete Zarf Schema"
+        entry: bash -c 'rm -f zarf.schema.json'
+        language: system
+
+  # UDS BUNDLE CHECK
+  - repo: local
+    hooks:
+      - id: download-schema
+        name: "Download UDS Bundle Schema"
+        entry: bash -c 'curl -o uds.schema.json https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/uds.schema.json'
+        language: system
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.14.0
+    hooks:
+      - id: check-jsonschema
+        name: "Validate UDS Bundles Against Schema"
+        files: "uds-bundle.yaml"
+        types: [yaml]
+        args: ["--schemafile", "uds.schema.json"]
+  - repo: local
+    hooks:
+      - id: delete-schema
+        name: "Delete UDS Bundle Schema"
+        entry: bash -c 'rm -f uds.schema.json'
+        language: system
+
+  # UDS TASK CHECK
+  - repo: local
+    hooks:
+      - id: download-schema
+        name: "Download UDS Tasks Schema"
+        entry: bash -c 'curl -o tasks.schema.json https://raw.githubusercontent.com/defenseunicorns/uds-cli/v0.14.0/tasks.schema.json'
+        language: system
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.14.0
+    hooks:
+      - id: check-jsonschema
+        name: "Validate UDS Tasks Against Schema"
+        files: "tasks.yaml"
+        types: [yaml]
+        args: ["--schemafile", "tasks.schema.json"]
+      - id: check-jsonschema
+        name: "Validate Create Tasks Against Schema"
+        files: "create.yaml"
+        types: [yaml]
+        args: ["--schemafile", "tasks.schema.json"]
+      - id: check-jsonschema
+        name: "Validate Publish Tasks Against Schema"
+        files: "publish.yaml"
+        types: [yaml]
+        args: ["--schemafile", "tasks.schema.json"]
+      - id: check-jsonschema
+        name: "Validate Deploy Tasks Against Schema"
+        files: "deploy.yaml"
+        types: [yaml]
+        args: ["--schemafile", "tasks.schema.json"]
+      - id: check-jsonschema
+        name: "Validate Setup Tasks Against Schema"
+        files: "setup.yaml"
+        types: [yaml]
+        args: ["--schemafile", "tasks.schema.json"]
+      - id: check-jsonschema
+        name: "Validate Test Tasks Against Schema"
+        files: "test.yaml"
+        types: [yaml]
+        args: ["--schemafile", "tasks.schema.json"]
+  - repo: local
+    hooks:
+      - id: delete-schema
+        name: "Delete UDS Tasks Schema"
+        entry: bash -c 'rm -f tasks.schema.json'
+        language: system
