Updates the JWT_SECRET to be correct

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -100,8 +100,8 @@ realtime:
       - name: JWT_SECRET
         valueFrom:
           secretKeyRef:
-            name: '{{ include "supabase.jwt.secretName" . }}'
-            key: '{{ include "supabase.realtime.secretKey" . }}'
+            name: supabase-bootstrap-jwt
+            key: secret
      command:
        - sh
        - -c
