--- a/packages/api/chart/templates/migration-job.yaml
+++ b/packages/api/chart/templates/migration-job.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   template:
     spec:
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: supabase-cli
           image: "{{ .Values.api.migration.image.repository }}:{{ .Values.api.migration.image.tag | default .Chart.AppVersion }}"
@@ -16,11 +18,11 @@ spec:
                   name: supabase-postgresql
                   key: postgres-password
             - name: MIGRATION_NAMESPACE
-              value: "{{ .Values.api.migration.namespace }}"
+              value: "{{ .Release.Namespace }}"
             - name: MIGRATION_SERVICE_NAME
-              value: "{{ .Values.api.migration.serviceName }}"
+              value: "{{ .Values.api.migration.env.serviceName }}"
             - name: MIGRATION_SERVICE_PORT
-              value: "{{ .Values.api.migration.servicePort }}"
+              value: "{{ .Values.api.migration.env.servicePort }}"
 
           # NOTE: This command is assuming the default username.
           command: ["/bin/sh"]
@@ -30,8 +32,6 @@ spec:
               supabase migration fetch --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --debug || true &&
               supabase db push --db-url="postgresql://postgres:$POSTGRES_PASSWORD@$MIGRATION_SERVICE_NAME.$MIGRATION_NAMESPACE.svc.cluster.local:$MIGRATION_SERVICE_PORT/postgres" --include-all --debug
           securityContext:
-            runAsUser: {{ .Values.image.securityContext.runAsUser }}
-            runAsGroup: {{ .Values.image.securityContext.runAsGroup }}
-            fsGroup: {{ .Values.image.securityContext.fsGroup }}
+            {{- toYaml .Values.api.migration.securityContext | nindent 12 }}
       restartPolicy: Never
   backoffLimit: 4
